[gd_scene load_steps=11 format=3 uid="uid://b6jah4018il5p"]

[ext_resource type="Script" uid="uid://ecv1g1eflubg" path="res://scripts/ui/MainMenu.gd" id="1"]
[ext_resource type="Script" uid="uid://b0cvcx804jr20" path="res://scripts/ui/FreePosition.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bqyvqxk65i0cx" path="res://assets/imagens/MainMenu/Blue Pixel Illustration Game Presentation (12).png" id="3_bhu4a"]
[ext_resource type="Texture2D" uid="uid://u380bb3f8u22" path="res://assets/imagens/home/fundo.png" id="3_xpiny"]
[ext_resource type="Texture2D" uid="uid://dulqorcns141f" path="res://assets/imagens/home/ceu.png" id="4_bhu4a"]
[ext_resource type="Texture2D" uid="uid://elsuvfuui1is" path="res://assets/imagens/MainMenu/Blue Pixel Illustration Game Presentation (13).png" id="6_7mi0g"]
[ext_resource type="Texture2D" uid="uid://di6qfvbh1bgx8" path="res://assets/imagens/MainMenu/Blue Pixel Illustration Game Presentation (11).png" id="6_e2per"]
[ext_resource type="Texture2D" uid="uid://2bnje12qcr3c" path="res://assets/imagens/MainMenu/Blue Pixel Illustration Game Presentation (14).png" id="6_nqjyj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d7y4p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6k3m"]
content_margin_left = 18.0
content_margin_top = 8.0
content_margin_right = 18.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 14)
anchors_preset = 0
offset_bottom = 14.0
script = ExtResource("2")
enabled = true

[node name="NameFocus" type="Button" parent="VBox"]
custom_minimum_size = Vector2(320, 34)
layout_mode = 0
offset_left = 425.0
offset_top = 371.0
offset_right = 807.0
offset_bottom = 443.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_d7y4p")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_d7y4p")
theme_override_styles/hover = SubResource("StyleBoxEmpty_d7y4p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d7y4p")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d7y4p")
flat = true
script = ExtResource("2")
enabled = true
position_px = Vector2(425, 371)

[node name="NameEdit" type="LineEdit" parent="VBox"]
custom_minimum_size = Vector2(320, 34)
layout_mode = 0
offset_left = 422.0
offset_top = 379.0
offset_right = 773.0
offset_bottom = 443.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 0.55)
theme_override_styles/normal = SubResource("StyleBoxFlat_q6k3m")
theme_override_styles/read_only = SubResource("StyleBoxFlat_q6k3m")
theme_override_styles/focus = SubResource("StyleBoxFlat_q6k3m")
placeholder_text = "Digite seu nome..."
script = ExtResource("2")
enabled = true
position_px = Vector2(422, 379)

[node name="Start" type="Button" parent="VBox" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(18, 12)
layout_mode = 0
offset_left = 887.0
offset_top = 373.0
offset_right = 951.0
offset_bottom = 436.0
focus_mode = 0
shortcut_context = NodePath("../../ParallaxBackground/5/Nome")
theme_override_styles/normal = SubResource("StyleBoxEmpty_d7y4p")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_d7y4p")
theme_override_styles/hover = SubResource("StyleBoxEmpty_d7y4p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d7y4p")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d7y4p")
disabled = true
button_mask = 3
flat = true
script = ExtResource("2")
enabled = true
position_px = Vector2(887, 373)

[node name="BluePixelIllustrationGamePresentation(12)" type="Sprite2D" parent="VBox/Start"]
position = Vector2(38, 40)
texture = ExtResource("3_bhu4a")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="1" type="Parallax2D" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/1"]
position = Vector2(676, 380.00003)
scale = Vector2(0.71796876, 0.7259259)
texture = ExtResource("3_xpiny")

[node name="2" type="Parallax2D" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/2"]
position = Vector2(674, 170.00003)
scale = Vector2(0.71796876, 0.7259259)
texture = ExtResource("4_bhu4a")

[node name="3" type="Parallax2D" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/3"]
position = Vector2(690, 207)
scale = Vector2(1.0088814, 1.2580487)
texture = ExtResource("6_nqjyj")

[node name="4" type="Parallax2D" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/4"]
position = Vector2(664, 646)
scale = Vector2(0.6801971, 0.6830986)
texture = ExtResource("6_7mi0g")

[node name="5" type="Parallax2D" parent="ParallaxBackground"]

[node name="Nome" type="Sprite2D" parent="ParallaxBackground/5"]
position = Vector2(598.00006, 413)
scale = Vector2(0.759773, 0.7434211)
texture = ExtResource("6_e2per")

[connection signal="pressed" from="VBox/NameFocus" to="." method="_on_name_focus_pressed"]
[connection signal="text_changed" from="VBox/NameEdit" to="." method="_on_name_changed"]
[connection signal="text_submitted" from="VBox/NameEdit" to="." method="_on_name_submitted"]
[connection signal="pressed" from="VBox/Start" to="." method="_on_start_pressed"]
